--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>TITULO NUEVO 2</h1>
+    <form action="#">
+            <input type="button" value="Enviar">
+    </form>
 </body>
 </html>
